# CaseGol

./: .gitignore  README.md
flask_app_case_gol/: .gitignore  pyproject.toml
flask_app_case_gol/flask_app_case_gol/: app.py
flask_app_case_gol/flask_app_case_gol/static/css/: styles.css
flask_app_case_gol/flask_app_case_gol/templates/: base.html  dashboard.html  grafico.html  index.html  login.html  register.html  resultados.html  results.html
flask_app_case_gol/instance/: voos.db
flask_app_case_gol/tests/: test_app.py
