[tool.poetry]
name = "flask-app-case-gol"
version = "0.1.0"
description = ""
authors = ["Jean Afonso <jean_bro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
pandas = "^2.2.2"
ipython = "^8.26.0"
flask-shell-ipython = "^0.5.1"
flask-login = "^0.6.3"
plotly = "^5.23.0"
js = "^1.0"
black = "^24.8.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
